@@ -1,3 +1,8 @@
+2015-02-08  6.9.0-6 Glenn Randers-Pehrson <glennrp@image...>
+  * Remove uninitialized, unused "p++" from coders/png.c, MNG reader.
+  * Initialize "length" in coders/png.c, WriteJNGImage().
+  * Fix signed/unsigned mismatch in coders/png.c, MNG reader.
+
 2015-02-08  6.9.0-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.0-5, SVN revision 17946.
 
